@@ -466,5 +466,5 @@ jpellerin+nose@gmail.com
 .SH COPYRIGHT
 LGPL
 
-.\" Generated by docutils manpage writer on 2011-03-21 10:52.
+.\" Generated by docutils manpage writer on 2011-03-22 09:55.
 .\" 
