@@ -7,6 +7,7 @@
 - Fixed problems with SkipTest in Python 3.2 (#389)
 - Fixes Xunit plugin to handle non-UTF8 characters (#395)
 - Makes --plugins more succinct when there are no options (#235)
+- Fixes mishandling of custom exceptions during failures (#405)
 - Fixes capture plugin when exception message contains non-ascii chars (#402)
 - Fixed bug in doctest plugin under python 3. Thanks to Thomas Kluyver
   for the patch. (#391)
